# rag

./: README.md
rag_final/: pyproject.toml
rag_final/app/: main.py
rag_final/app/routes/v1/: __init__.py
rag_final/app/routes/v1/endpoints/: documents.py  health.py  ingest.py  pipelines.py  query.py
rag_final/app/schemas/: documents.py  ingest.py  query.py
rag_final/config/: chunking_config.yaml  docling_config.yaml  models.py  settings.py
rag_final/tests/integration/: test_documents_endpoint.py
rag_final/tests/unit/: test_chunking.py  test_config.py  test_user_context_fastapi.py  test_user_isolation.py
rag_final/utils/: chunking.py  docling_pipeline.py  document_version_registry.py  embedding.py  indexing_pipeline.py  metadata_enricher.py  pipeline_registry.py  user_context.py  user_isolation.py
rag_pipeline/: Dockerfile  docker-compose.yml
rag_pipeline/app/: dependencies.py  main.py
rag_pipeline/app/routes/v1/: __init__.py
rag_pipeline/app/routes/v1/endpoints/: ingest.py  query.py
rag_pipeline/app/schemas/: ingest.py  pipeline.py  query.py
rag_pipeline/config/: chunking_config.yaml  embedding_config.yaml  query_config.yaml  store_config.yaml
rag_pipeline/tests/: conftest.py
rag_pipeline/tests/integration/: test_api_endpoints.py  test_ingestion_pipeline.py
rag_pipeline/tests/unit/: test_chunking.py  test_docling_pipeline.py  test_query_pipeline.py
rag_pipeline/utils/: chunking.py  docling_pipeline.py  document_store.py  embedding.py  indexing_pipeline.py  metadata_enricher.py  query_pipeline.py  tracing.py
